<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">&appname;</string>
    <string name="title_activity_controlcenter">&appname;</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_gemtec_debug_info">Debug info</string>
    <string name="action_quit">Quit</string>
    <string name="action_donate">Donate</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="controlcenter_find_device">Find lost device</string>
    <string name="find_lost_device_message">Search for %1$s?</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_change_led_color">Change LED Color</string>
    <string name="controlcenter_change_fm_frequency">Change FM Frequency</string>
    <string name="controlcenter_connect">Connect…</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="controlcenter_set_alias">Set Alias</string>
    <string name="controlcenter_navigation_drawer_open">Open navigation drawer</string>
    <string name="controlcenter_navigation_drawer_close">Close navigation drawer</string>
    <string name="controlcenter_snackbar_need_longpress">Long press the card to disconnect</string>
    <string name="controlcenter_snackbar_disconnecting">Disconnecting</string>
    <string name="controlcenter_snackbar_connecting">Connecting…</string>
    <string name="controlcenter_snackbar_requested_screenshot">Taking a screenshot of the device</string>
    <string name="controlcenter_calibrate_device">Calibrate Device</string>
    <string name="battery_detail_activity_title">Battery info</string>
    <string name="battery_level">Battery level</string>
    <string name="calendar_day">Day</string>
    <string name="calendar_week">Week</string>
    <string name="calendar_two_weeks">Two weeks</string>
    <string name="calendar_month">Month</string>
    <string name="calendar_three_months">3 months</string>
    <string name="calendar_six_months">6 months</string>
    <string name="calendar_year">Year</string>
    <string name="title_activity_debug">Debug</string>
    <string name="debugactivity_really_factoryreset_title">Really factory reset?</string>
    <string name="debugactivity_really_factoryreset">Doing a factory reset will delete all data from the connected device (if supported). Xiaomi/Huami devices also change Bluetooth MAC address, so they appear as a new devices to Gadgetbridge.</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate System Weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate System Weather app</string>
    <string name="appmanager_weather_install_provider">Install the Weather Notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification blacklist</string>
    <string name="blacklist_all_for_notifications">Blacklist all for notifications</string>
    <string name="whitelist_all_for_notifications">Whitelist all for notifications</string>
    <string name="title_activity_calblacklist">Blacklisted Calendars</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install the %s.</string>
    <string name="fw_upgrade_notice_amazfitbip">You are about to install the %s firmware on your Amazfit Bip.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitbip_lite">You are about to install the %s firmware on your Amazfit Bip Lite.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor">You are about to install the %s firmware on your Amazfit Cor.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor2">You are about to install the %s firmware on your Amazfit Cor 2.
\n
\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.
\n
\nNote: You do not have to install .res if it is exactly the same as the one previously installed.
\n
\nPROCEED AT YOUR OWN RISK!
\n
\nCOMPLETELY UNTESTED, PROBABLY YOU NEED TO FLASH A BEATS_W FIRMWARE IF YOUR DEVICE NAME IS \"Amazfit Band 2\"</string>
    <string name="fw_upgrade_notice_amazfitgtr">You are about to install the %s firmware on your Amazfit GTR.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitgts">You are about to install the %s firmware on your Amazfit GTS.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfit_trex">You are about to install the %s firmware on your Amazfit T-Rex.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitvergel">You are about to install the %s firmware on your Amazfit Verge Lite.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband3">You are about to install the %s firmware on your Mi Band 3.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband4">You are about to install the %s firmware on your Mi Band 4.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband5">You are about to install the %s firmware on your Mi Band 5.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitx">You are about to install the %s firmware on your Amazfit X.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitneo">You are about to install the %s firmware on your Amazfit Neo.
\n
\nYour band will reboot after installing the .fw file.
\n
\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_multi_upgrade_notice">You are about to install the %1$s and %2$s firmware, instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Gadgetbridge.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Gadgetbridge.\n\nYou are DISCOURAGED from flashing it!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the Gadgetbridge developers to whitelist the %s firmware version.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_enable_calls">Enable calls</string>
    <string name="pref_title_enable_sms">Enable SMS</string>
    <string name="pref_gemtec_debug">&appname; debug mode</string>
    <string name="gemtec_listen_devices_hint">This application does not perform any bonding with the &appname; device. It only saves the MAC Address and listens to the important messages sent by the device. Activate location (e.g. GPS) and Bluetooth. Disable Privacy Guard for &appname;, because it may crash and reboot your phone. If no device is found after a few minutes, try again after rebooting your mobile device.</string>
    <string name="gemtec_info">&appname; emergency scenario</string>
    <string name="device_info">Device info</string>
    <string name="mac_address_title">MAC Address:</string>
    <string name="fall_counter_title">Fall counter:</string>
    <string name="emergency_contact_list">Emergency Contact List:</string>
    <string name="icon_placeholder" translatable="false">Icon</string>
    <string name="gemtec_description">Android support for &appname; wrist band</string>
    <string name="first_steps">First Steps</string>
    <string name="about_configure_device">Configure a &appname; device</string>
    <string name="about_configure_device_description">Description</string>
    <string name="about_add_contacts">Add emergency contacts</string>
    <string name="about_add_contacts_description">Description</string>
</resources>